--- a/src/components/CourseGoals/CourseInput/CourseInput.css
+++ b/src/components/CourseGoals/CourseInput/CourseInput.css
@@ -17,6 +17,16 @@
   padding: 0 0.25rem;
 }
 
+.form-control.invalid input {
+  border-color: red;
+  background-color: #ffd7d7;
+}
+
+
+.form-control.invalid label {
+  color: red;
+}
+
 .form-control input:focus {
   outline: none;
   background: #fad0ec;
